updated project to latest xcode 13 + updated afnetworking lib

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ Resources/ImgurKit_Tests-Info.plist
 ImgurSession.xcodeproj/project.xcworkspace/contents.xcworkspacedata
 
 ImgurSession.xcworkspace/contents.xcworkspacedata
+vendor
